# squeeze_face_recognition

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  configure.sh  install_openface.sh  squeezeCNN.cbp
doc/: readme.md
generated-embeddings/: classifier.pkl  labels.csv  reps.csv
src/: base64.cpp  base64.h  classifier.py  face_extraction.cpp  face_extraction.hpp  face_tracking.cpp  face_tracking.hpp  mainAlgo.cpp  network_utils.cpp  network_utils.hpp  training_generator.cpp  training_generator.hpp  utils.cpp  utils.hpp  video_consumer.cpp  video_consumer.hpp
